add email address

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				
 				<div class="col-lg-4">
 					<h3>Support Us</h3>
-					<p>Thanks! We're not looking for funding right now but we're hoping to build a partnership with a talented, bleeding-edge sales force. If you think you've got what it takes, drop us a message on  <a href="https://www.facebook.com/offrhk"> facebook</a>.</p>
+					<p>Thanks! We're not looking for funding right now but we're hoping to build a partnership with a talented, bleeding-edge sales force. If you think you've got what it takes, drop us a message at <a href="mailto:contact@offr.hk">contact@offr.hk</a>.</p>
 				</div><!-- col -->
 
 			</div><!-- row -->
