add email address

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<span><h1>HONG<span class="icon icon-heart"></span>KONG</h1></span>
 				<hr>
 				<p>It had to be Hong Kong.</p>		
-				<p><a class="icon icon-twitter" href="https://twitter.com/offr_hk"></a> | <a class="icon icon-facebook" href="https://www.facebook.com/offrhk"></a></p>
+				<p><a class="icon icon-twitter" href="https://twitter.com/offr_hk"></a> | <a class="icon icon-facebook" href="https://www.facebook.com/offrhk"></a> | <a class="icon icon-email" href="mailto:contact@offr.hk"></a></p>
 		
 			</div><!-- container -->
 		</section><!-- section -->
@@ -149,6 +149,7 @@
 					<h3>Contact Information</h3>
 						<span class="icon icon-twitter"></span> <a href="https://twitter.com/offr_hk"> @offr_hk </a> <br/>
 						<span class="icon icon-facebook"></span> <a href="https://www.facebook.com/offrhk"> Offr HK </a> <br/>
+						<span class="icon icon-email"></span> <a href="mailto:contact@offr.hk"> contact@offr.hk </a> <br/>
 					</p>
 				</div><!-- col -->
 				
